<resources>
    <string name="app_name">Access-App</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="m">M</string>
    <string name="stats">Stats</string>
    <string name="pick_time" />
    <string name="pick_date" />
    <string name="hello" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
